<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CalculatorBlock">

    <LinearLayout style="@style/CalculatorButtonBlock.Numbers">

        <Button
            android:id="@+id/btn7"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn4"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn1"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btnSeparator"
            style="@style/CalculatorButton.Number"
            android:text="@string/btnSeparator" />
    </LinearLayout>

    <LinearLayout style="@style/CalculatorButtonBlock.Numbers">

        <Button
            android:id="@+id/btn8"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn5"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn2"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn0"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn0" />
    </LinearLayout>

    <LinearLayout style="@style/CalculatorButtonBlock.Numbers">

        <Button
            android:id="@+id/btn9"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btn6"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btn3"
            style="@style/CalculatorButton.Number"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnCalculate"
            style="@style/CalculatorButton.Number"
            android:text="@string/btnCalculate" />
    </LinearLayout>

</LinearLayout>